<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeActivity.Projects.ProjectsFragment"
    android:layout_margin="5dp"
    >

    <TextView
        android:id="@+id/projects_fragment_projects_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/projects_button"
        android:textSize="@dimen/page_title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/projects_fragment_recommendations_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommendations"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:layout_alignParentRight="true"
        android:background="@color/colorPrimary"
        />
    <TextView
        android:id="@+id/projects_fragment_no_projects_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_not_marked_any_climbs_as_projects_yet_click_on_recommendations_if_you_need_any_suggestions"
        android:textAlignment="center"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/projects_fragment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/projects_fragment_projects_text"
        >
    </android.support.v7.widget.RecyclerView>


</RelativeLayout>
