...
            />

        <TextView
            android:id="@+id/climb_row_style_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="crimp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.5"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
