<resources>
    <string name="app_name">Clamber</string>
    <string name="home_button_text">Home</string>
    <string name="wall_info_button">Walls</string>
    <string name="projects_button">Projects</string>
    <string name="user_info_button_text">User Info</string>
    <string name="the_circuit_gym_text">The Circuit Bouldering Gym</string>
    <string name="circuit_image">Image of Inside of Circuit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
...
