<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.HomeActivity.UserInfo.UserInfoFragment"
    android:layout_margin="5dp"
    >
    <android.support.v7.widget.CardView
        android:id="@+id/user_info_fragment_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="3dp"
        app:cardCornerRadius="4dp"
        app:contentPadding="5dp"
        >
        <LinearLayout
            android:id="@+id/user_info_update_user_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_s"
                    android:textSize="18sp"
                    android:padding="5dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height_text"
                    android:textSize="18sp"
                    android:padding="5dp"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skill_level_s"
                    android:textSize="18sp"
                    android:padding="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/user_info_fragment_user_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="rbock"
                    android:textSize="18sp"
                    android:padding="5dp"
                    />
                <TextView
                    android:id="@+id/user_info_fragment_height_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="5' 7''"
                    android:textSize="18sp"
                    android:padding="5dp"
                    />

                <TextView
                    android:id="@+id/user_info_fragment_skill_level_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="5"
                    android:textSize="18sp"
                    android:padding="5dp"
                    />

            </LinearLayout>


            <Button
                android:id="@+id/user_info_fragment_about_me_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_my_info"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:background="@color/colorPrimary"
                />
        </LinearLayout>


    </android.support.v7.widget.CardView>

        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/user_fragment_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_n_history"
            android:textAlignment="center"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:layout_below="@id/user_info_fragment_card_view"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/user_info_fragment_no_history_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_completed_history_yet"
            android:layout_below="@id/user_fragment_history_button"
            android:visibility="invisible"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_activity_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/user_fragment_history_button"
            android:visibility="invisible"
            >
        </android.support.v7.widget.RecyclerView>


</RelativeLayout>
